--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-emotion": "^4.4.0",
+    "gatsby-plugin-gdpr-cookies": "^1.0.11",
     "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-offline": "^3.6.0",
     "gatsby-plugin-postcss": "^3.1.0",
     "gatsby-plugin-preact": "^4.3.0",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -33,6 +35,7 @@
     "preact": "^10.5.7",
     "preact-render-to-string": "^5.1.12",
     "react": "^16.13.1",
+    "react-cookie-consent": "^6.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^3.0.2",
