--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.10.0",
+    "gatsby-plugin-sitemap": "^2.8.0",
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-remark": "^2.8.18",
