--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "author": "Anton Sjölander",
   "dependencies": {
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
-    "@emotion/core": "10.1.1",
-    "@emotion/styled": "10.0.27",
-    "@emotion/styled-base": "10.0.31",
     "add": "^2.0.6",
     "gatsby": "^2.24.85",
     "gatsby-background-image": "^1.3.1",
@@ -32,7 +29,6 @@
     "gatsby-transformer-remark": "^2.8.18",
     "gatsby-transformer-sharp": "^2.8.0",
     "gatsby-transformer-sqip": "^2.7.0",
-    "node-sass": "^4.14.1",
     "preact": "^10.5.7",
     "preact-render-to-string": "^5.1.12",
     "react": "^16.13.1",
@@ -48,12 +44,15 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@emotion/core": "10.1.1",
+    "@emotion/styled": "10.0.27",
+    "@emotion/styled-base": "10.0.31",
     "@tailwindcss/custom-forms": "^0.2.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "contentful-import": "^7.9.14",
-    "dotenv": "^8.2.0",
-    "gh-pages": "^3.1.0",
-    "netlify-cli": "^2.54.0"
+    "dotenv": "^10.0.0",
+    "netlify-cli": "^2.54.0",
+    "node-sass": "^7.0.0"
   },
   "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
   "keywords": [
